2008-10-16  1.11  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11 ========================
	* 

2008-10-02  Andreas Kupries  <andreask@activestate.com>

	* ldapx.man: Redirected the reference to non-existing subsection
	  'Data' to 'Entry Instance Data'. Fixed [SF Bug 2124523].

2008-03-26  Michael Schlenker  <mic42@users.sourceforge.net>

	* ldap.tcl: Applied Tcllib patch #2018141 with some changes,
	* ldap.man: This fixes and enhances the ldap search 
	* ldap.test: filter handling. Big thanks to Konstantin
	* pkgIndex.tcl: Khomoutov for the patch and tests.
	  This fixes Tcllib bugs #1751871 and #1852718.
	  Additionally fixed the other ldap tests to use
	  a more concise style.
	  Bumped version to 1.7.

2008-03-26  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ldap.tcl (ldap::buildSASLBindRequest): Fixed a bad continuation
	* ldap.man: line, i.e. whitespace between the backslash and the
	* pkgIndex.tcl: end-of-line. Generally removed all trailing
	  whitespace from the whole file. Bumped version to 1.6.9.

2008-02-07  Pierre David <pdav@users.sourceforge.net>

	* ldapx.tcl:	Fixed a small bug when reading an LDIF modrdn.

2007-09-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.10 ========================
	* 

2007-08-xx  Pierre David <pdav@users.sourceforge.net>

	* ldapx.tcl:	Modified format for "change" entries
	* ldapx.test:	Adapted tests
	* ldapx.man:	Added a note about the format: for internal use only.

          ***POTENTIAL INCOMPATIBILITY***
	  Format of ldapx::entry "change" data was not sufficient
	  to represent all modifications made on entries. So, the
	  format has been modified to include several invidual
	  changes. This should not be a problem since "change"
	  format is intended to be used only by ldapx methods.

2007-08-06  Pierre David <pdav@users.sourceforge.net>

	* ldapx.tcl:	Saved dn was not restored during swap method.